--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,23 @@
 cachetools==5.2.1
+colorama==0.4.6
+google-api-core==2.11.0
+google-api-python-client==2.72.0
 google-auth==2.16.0
+google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.8.0
+googleapis-common-protos==1.58.0
 gspread==5.7.2
+httplib2==0.21.0
 numpy==1.24.1
 oauthlib==3.2.2
 pandas==1.5.2
+protobuf==4.21.12
+pwinput==1.0.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pygsheets==2.0.6
+pyparsing==3.0.9
 pytz==2022.7
 requests-oauthlib==1.3.1
 rsa==4.9
+uritemplate==4.1.1
